# ATM-Activity-Dashboard

./: .gitignore  README.md  app.py  atm_logs.csv  batch_inference.py  inference.py  main.py  pyproject.toml  temp_1.mp4.avi
.streamlit/: config.toml
