[project]
name = "atm-activity-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "streamlit>=1.55.0",
]

[tool.uv.workspace]
members = [
    "streamlit",
]
